src/objects/Research_team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Hours_Worked__c</fullName>
        <label>#Hours Worked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Research_Title__c</fullName>
        <formula>Research__r.Name</formula>
        <label>Research Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Research__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Research</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Research team Members</relationshipLabel>
        <relationshipName>Study_team_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Research_team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Research team Member</label>
    <nameField>
        <label>Research team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Research team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>